# sphinx-localtoc

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/sphinx_localtoc/: __init__.py  _version.py  localtoc_dropdown.py  localtoc_type.py
src/sphinx_localtoc/_static/styles/: localtoc.css
src/sphinx_localtoc/tools/: localtoc_css_generator.py
